# ising-cpp

./: CMakeLists.txt  README.md  plotting.py  sim_results.csv
include/: cli.h  csv.h  lattice.h  simulation.h
sim_data/: L16_crit.csv  L16_high.csv  L16_low.csv  L32_crit.csv  L32_high.csv  L32_low.csv  L64_crit.csv  L64_high.csv  L64_low.csv
src/: CMakeLists.txt  cli.cpp  csv.cpp  csv.h  lattice.h  main.cpp  simulation.cpp  simulation.h
